--- a/src/App.css
+++ b/src/App.css
@@ -38,7 +38,16 @@
 }
 
 
-#connectbtn {
+#connectbtn1 {
+  margin-top: 40vh;
+  font-family: 'yoot', cursive;
+  color: black;
+  cursor: pointer;
+  font-size: 6em;
+}
+
+
+#connectbtn2 {
   margin-top: 40vh;
   font-family: 'yoot', cursive;
   color: black;
@@ -48,7 +57,7 @@
 
 #about {
   position: absolute;
-  margin-left: -1vw;
+  margin-left: 10vw;
   margin-top: 7vh;
   font-family: 'yoot', cursive;
   color: black;
@@ -59,17 +68,7 @@
 #mint {
   position: absolute;
   margin-top: 7vh;
-  margin-left: -40vw;
-  font-family: 'yoot', cursive;
-  color: black;
-  cursor: pointer;
-  font-size: 4em;
-}
-
-#team {
-  position: absolute;
-  margin-left: 40vw;
-  margin-top: 7vh;
+  margin-left: -35vw;
   font-family: 'yoot', cursive;
   color: black;
   cursor: pointer;
@@ -78,7 +77,7 @@
 
 #stake {
   position: absolute;
-  margin-left: -20vw;
+  margin-left: -12vw;
   margin-top: 7vh;
   font-family: 'yoot', cursive;
   color: black;
@@ -88,7 +87,7 @@
 
 #market {
   position: absolute;
-  margin-left: 20vw;
+  margin-left: 34vw;
   margin-top: 7vh;
   font-family: 'yoot', cursive;
   color: black;
@@ -135,12 +134,9 @@
 
 
 .soldout {
-  position: absolute;
-  font-family: 'help', cursive;
-  font-size: 3em;
+  font-family: "yoot", cursive;
   margin: auto;
-  left: 43vw;
-  top: 11vh;
+  font-size: 5em;
 }
 
 .soldout-phone {
@@ -165,7 +161,7 @@
 }
 
 .round-button{
-  font-size: 7em;
+  font-size: 9em;
 }
 
 #mint-amount{
@@ -216,16 +212,17 @@
     font-size: 2.8em;
   }
   .round-button{
-    font-size: 2.8em;
+    font-size: 6em;
   }
   #mint-amount{
-    font-size: 2.8em;
+    font-size: 4em;
   }
   #text-1p{
     font-size: 1.5em;
   }
   #text1{
-    margin-top: 5vh;
+    font-size: 1.45em;
+    top: 40vh;
   }
   #text-2p{
     font-size: 1.5em;
@@ -244,17 +241,21 @@
     font-size: 2.5em;
   }
   .round-button{
-    font-size: 2.5em;
+    font-size: 6em;
   }
   #mint-amount{
-    font-size: 2.5em;
+    font-size: 4em;
   }
   #text-1p{
     font-size: 1.3em;
   }
+  .mintbtn{
+    font-size: 3em;
+  }
+
   #text1{
     top: 50vw;
-    font-size: 1.6em;
+    font-size: 1.45em;
   }
   #text-2p{
     font-size: 1.3em;
